--- a/css/style.css
+++ b/css/style.css
@@ -1,91 +1,74 @@
 .header{
     display: flex;
     background-color: #1f2937;
-    padding-left: 17em;
-    padding-right: 17em;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
     padding-bottom: 8em;
+}
+.header .box1{
+    display: flex;
     flex-direction: column;
+    width: 500px;
+    height: 250px;
+    margin: 0;
+    border: 0;
 }
 
-.top-header{
+.row{
     display: flex;
     flex-direction: row;
-    min-width: 25em;
-    width: 100%;
-    height: 280px;
-    flex-shrink: 0;
+    width: auto;
+    gap: 5px;
 }
 
-.logo{
-    font-size: 24px;
-}
-
-.links{
-    display: flex;
-    width: 100%;
-    align-items: baseline;
-    justify-content: space-between;
-    font-family:'Roboto', sans-serif;;
-    font-size: 18px;
-    color: #e5e7eb;
-}
-
-.links a{
-    color: white;
-}
-
-a{
+.box1 .logo{
     text-decoration: none;
-}
-
-ul{
-    list-style-type: none;
-    display: flex;
-    gap: 15px;
-}
-
-.section-left{
+    font-size: 24px;
+    color: #f9faf8;
     width: 100%;
-    padding-right: 20px;
-    min-width: 15em;
 }
 
-.lower-header{
+.box1 .links ul, a{
+    list-style-type: none;
+    text-decoration: none;
+    color: #f9faf8;
     display: flex;
     flex-direction: row;
-    height: 280px;
+    gap: 40px;
+    margin: 6px 0px;
 }
 
-.section-left div{
+.box1 .links{
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+}
+
+.box1 .head{
     color: #f9faf8;
-    font-family:'Roboto', sans-serif;
-
-}
-.head{
     font-size: 48px;
-    font-weight: bolder;
+    font-weight: 900;
 }
-.text-under{
+
+.box1 .text-under{
+    color: #e5e7eb;
     font-size: 18px;
-    padding-top: 10px;
-    padding-bottom: 14px;
+    padding-top: 30px;
 }
 
-.image{
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    min-width: 9em;
+.box1 .button{
+    padding-top: 30px;
 }
 
-.image-content{
-    background-color: grey;
-    width: 100%;
+.box1 .image{
     display: flex;
-    color: #f9faf8;
-    font-family:'Roboto', sans-serif;
+    background-color: #e5e7eb;
+    height: 100%;
+    width: 100%;
     justify-content: center;
     align-items: center;
+    font-family:'Roboto', sans-serif;
 }
 
 .body-header{
@@ -114,9 +97,10 @@ ul{
     margin: 0em 1em;
 }
 
-.boxes{
+.images .boxes{
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .box{
@@ -139,9 +123,18 @@ ul{
     font-family:'Roboto', sans-serif;
     font-size: 36px;
     font-style: italic;
-    padding: 6em 272px;
+    padding: 6em auto;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.inspiring-quote .box{
+    border: 0;
+    width: 540px;
+    height: 300px;
+    margin: 5em 0em;
 }
 
 .author{
@@ -175,16 +168,19 @@ ul{
 
 .sign-up .button{
     margin-left: auto;
-    display: flex;
-    align-items: center;
+    border: 3px #f9faf8 solid;
+    border-radius: 7px;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 
 .button button{
+    display: flex;
     background-color: #3882f6;
-    border-radius: 3px;
+    border-radius: 7px;
     font-size: 18px;
     font-family:'Roboto', sans-serif;
-    border: #f9faf8 1px solid;
-    color: white;
-
+    border: 1px solid #3882f6;
+    width: 7em;
+    justify-content: center;
 }
